--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -18,7 +18,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-        <title>Emergent | Fullstack App</title>
+        <title>UPI Fraud Detection</title>
         <script src="https://assets.emergent.sh/scripts/emergent-main.js"></script>
         <!--
         These two scripts have been added for the testing, please do not edit or remove them
@@ -65,7 +65,6 @@
         <a
             id="emergent-badge"
             target="_blank"
-            href="https://app.emergent.sh/?utm_source=emergent-badge"
             style="
                 display: flex !important;
                 align-items: center !important;
@@ -91,7 +90,7 @@
             >
                 <img
                     style="width: 20px; height: 20px; margin-right: 8px"
-                    src="https://avatars.githubusercontent.com/in/1201222?s=120&u=2686cf91179bbafbc7a71bfbc43004cf9ae1acea&v=4"
+                    
                 />
                 <p
                     style="
@@ -105,7 +104,7 @@
                         margin-bottom: 0;
                     "
                 >
-                    Made with Emergent
+
                 </p>
             </div>
         </a>
